--- a/register.html
+++ b/register.html
@@ -1,22 +1,3 @@
-<?php
-function registerUser() {
-    if ($_SERVER["REQUEST_METHOD"] == "POST") {
-        $username = $_POST["username"];
-        $password = $_POST["password"];
-        $password2 = $_POST["password2"];
-
-        if ($password == $password2 && !empty($username)) {
-            $user_credential_data = fopen("userlog.txt", "a");
-            $data = $username . "," . $password . "\n";
-            fwrite($user_credential_data, $data);
-            fclose($user_credential_data);
-            header("Location: index.php");
-            exit();
-        }
-    }
-}
-registerUser();
-?>
 
 <!DOCTYPE html>
 <html lang="en">
@@ -29,7 +10,7 @@ registerUser();
 <body>
     <div class="login-container">
         <h2>Register New User</h2>
-        <form action="register.php" method="post">
+        <form action="register_user.php" method="post">
             <div class="form-group">
                 <label for="username">Username:</label>
                 <input type="text" id="username" name="username" required>
@@ -46,14 +27,9 @@ registerUser();
                 <input type="submit" value="Register" action=>
             </div>
           
-            <?php 
-                if ($_SERVER["REQUEST_METHOD"] == "POST"){
-                  registerUser();
-                }
-            ?>
                   
             <div class="form-group">
-                <a href="index.php" class="login-link">Back to Login</a>
+                <a href="login.html" class="login-link">Back to Login</a>
             </div>
         </form>
     </div>
